syntax = "proto3";

option csharp_namespace = "UserService.Proto";

package UserService;

import "DatabaseExtension.Proto/Filters/Filter.proto";

message UserNotifySettingGetRequest {
    string Id = 1;
}

message UserNotifySettingsGetRequest {
    string ContractProfileId = 1;

    DatabaseExtension.Filter Filter = 2;
}
